fix(SP-48): refactor code